# SpaceInvaders

./: Alien.cpp  Alien.h  Boss.cpp  Boss.h  Building.cpp  Building.h  CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Game_Object.cpp  Game_Object.h  Game_state.h  Menu_state.cpp  Menu_state.h  Missile.cpp  Missile.h  Moveable_Unit.cpp  Moveable_Unit.h  Moving_Object.cpp  Moving_Object.h  Object.cpp  Object.h  Player.cpp  Player.h  README.md  Random.cpp  Random.h  State.cpp  State.h  Unit.cpp  Unit.h  a.out  main.cpp  movement.h  point.h  sfml
Alternate/: Alien.cpp  Alien.h  Boss.cpp  Boss.h  CMakeCache.txt  CMakeLists.txt  Collides.cpp  Collides.h  Component.h  Entity.cpp  Entity.h  Game_State.cpp  Game_State.h  Global_Values.h  Lives.cpp  Lives.h  Menu_State.cpp  Menu_State.h  Missile.cpp  Missile.h  Movable.cpp  Movable.h  Player.cpp  Random.cpp  Shooting.cpp  Shooting.h  SpaceInvaders  State.cpp  State.h  Static_Entity.cpp  Static_Entity.h  Statistics.cpp  Statistics.h  Texture_Manager.cpp  Textured.cpp  Textured.h  World.cpp  World.h  a.out  cmake_install.cmake  (+3 more)
Alternate/html/: Alien_8h_source.html  Boss_8h_source.html  Collides_8h_source.html  Component_8h_source.html  Entity_8h_source.html  Game__State_8h_source.html  Global__Values_8h_source.html  Lives_8h_source.html  Menu__State_8h_source.html  Missile_8h_source.html  Movable_8h_source.html  Player_8h_source.html  Random_8h_source.html  Shooting_8h_source.html  State_8h_source.html  Static__Entity_8h_source.html  Statistics_8h_source.html  Texture__Manager_8h_source.html  Textured_8h_source.html  World_8h_source.html  annotated.html  classCollides-members.html  classCollides.html  classComponent-members.html  classComponent.html  classComponent__inherit__graph.dot  classEntity-members.html  classEntity.html  classExit__State-members.html  classExit__State.html  classGame__State-members.html  classGame__State.html  classGame__State__inherit__graph.dot  classGenerator-members.html  classGenerator.html  classLives-members.html  classLives.html  classLives__coll__graph.dot  classMenu__State-members.html  classMenu__State.html  (+44 more)
Alternate/latex/: annotated.tex  classCollides__inherit__graph.dot  classComponent.tex  classEntity.tex  classExit__State.tex  classLives.tex  classMenu__State__inherit__graph.dot  classMissile__Spawner.tex  classPerimeter__Movement.tex  classPlayer__Movement.tex  classPlayer__Shooting__inherit__graph.dot  classState.tex  classStatistics.tex  classStatistics__inherit__graph.dot  classTextured.tex  classTextured__inherit__graph.dot  classVertical__Movement.tex  refman.tex
SpaceInvaders/: Alien.cpp  Alien.h  Boss.cpp  Boss.h  CMakeCache.txt  CMakeLists.txt  Collides.cpp  Collides.h  Component.cpp  Component.h  Doxyfile  End_State.cpp  End_State.h  Entity.cpp  Entity.h  Game_State.cpp  Global_Values.h  Lives.cpp  Lives.h  Makefile  Menu_State.cpp  Menu_State.h  Missile.cpp  Missile.h  Movable.cpp  Movable.h  Player.cpp  Player.h  Random.h  Shooting.cpp  Shooting.h  SpaceInvaders  State.cpp  State.h  Static_Entity.cpp  Static_Entity.h  Statistics.cpp  Statistics.h  Texture_Manager.cpp  Texture_Manager.h  (+8 more)
SpaceInvaders/html/: Boss_8h_source.html  Global__Values_8h_source.html  Menu__State_8h_source.html  Missile_8h_source.html  Random_8h_source.html  Texture__Manager_8h_source.html  World_8h_source.html  classCollides-members.html  classCollides__inherit__graph.dot  classComponent-members.html  classEntity-members.html  classExit__State-members.html  classExit__State.html  classExit__State__coll__graph.dot  classGame__State-members.html  classGame__State.html  classLives.html  classMenu__State-members.html  classMissile__Spawner__coll__graph.dot  classPerimeter__Movement-members.html  classPerimeter__Movement.html  classPlayer__Movement-members.html  classPlayer__Movement.html  classPlayer__Shooting-members.html  classPlayer__Shooting.html  classPlayer__Shooting__coll__graph.dot  classRemove__Outside-members.html  classRemove__Outside__coll__graph.dot  classSideways__Movement-members.html  classState__inherit__graph.dot  classStatistics-members.html  classTexture__Manager-members.html  classTextured-members.html  classTextured.html  classVertical__Movement.html  classVertical__Movement__coll__graph.dot  classWorld.html  functions.html  index.html  inherit_graph_3.dot
SpaceInvaders/latex/: classCollides.tex  classCollides.tex.tmp  classComponent__inherit__graph.dot  classExit__State__inherit__graph.dot  classGame__State.tex  classGame__State__inherit__graph.dot  classGenerator.tex  classLives__inherit__graph.dot  classMenu__State.tex  classMissile__Spawner__inherit__graph.dot  classPerimeter__Movement__coll__graph.dot  classPlayer__Movement__coll__graph.dot  classPlayer__Shooting.tex  classRemove__Outside.tex  classSideways__Movement.tex  (+8 more)
(+37 files in other folders)
